Added Netlify function for Google Sheet proxy

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <!-- <span></span><span></span><span></span><span></span><span></span> -->
   <div class="container">
     <h1>🎉 GOTL 4.0 Check-In</h1>
 
